--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,6 +45,13 @@
             android:contentDescription="Edit this profile"
             app:srcCompat="@drawable/baseline_edit_24" />
 
+        <EditText
+    android:id="@+id/sni_input"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:hint="Enter SNI Host (e.g. www.freesite.com)"
+    android:inputType="text" />
+
         <ImageButton
             android:id="@+id/addProfileButton"
             android:layout_width="wrap_content"
@@ -53,7 +60,7 @@
             android:background="@android:color/transparent"
             app:tint="?colorPrimary"
             android:contentDescription="Add new profile"
-            app:srcCompat="@drawable/baseline_add_24" />
+           app:srcCompat="@drawable/baseline_add_24" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
